# bitcoinmw

./: .gitignore  Cargo.toml  README.md  README.md.template  azure-pipelines.yml  lib.rs.template
.ci/: all.yml  cargo_test.bat  cargo_test.sh  evh2_test.sh  long.yml  long_running_test.bat  long_running_test.sh  make_cc_graph.sh  perf.bat  perf.sh  pushdocs.sh  release.yml  tarpaulin.sh  windows-release.yml
base/: Cargo.toml
base/src/: config.rs  error.rs  functions.rs  lib.rs  macros.rs  public.rs  rand.rs  ser.rs  test.rs  tt.rs  utils.rs
config/: Cargo.toml
config/src/: builder.rs  config.rs  impls.rs  lib.rs  macros.rs  public.rs  test.rs  types.rs
config2/: Cargo.toml
config2/src/: macros.rs  test.rs
core/: Cargo.toml
core/src/: impls.rs  lib.rs  macros.rs  public.rs  test.rs
crates/cfg-if-1.0.0/src/: lib.rs
crates/cfg-if-1.0.0/tests/: xcrate.rs
crates/downcast-0.11.0/examples/: simple.rs  sync_service.rs  with_params.rs
crates/downcast-0.11.0/src/: lib.rs
crates/downcast-0.11.0/tests/: tests.rs
crates/dyn-clone-1.0.17/examples/: readme.rs
crates/dyn-clone-1.0.17/src/: lib.rs
crates/dyn-clone-1.0.17/tests/: compiletest.rs  macros.rs  trait.rs
crates/getrandom-0.2.15/: Cargo.toml
crates/getrandom-0.2.15/benches/: buffer.rs
crates/getrandom-0.2.15/src/: apple-other.rs  custom.rs  error.rs  error_impls.rs  espidf.rs  fuchsia.rs  getentropy.rs  getrandom.rs  hermit.rs  js.rs  lazy.rs  lib.rs  linux_android.rs  linux_android_with_fallback.rs  netbsd.rs  rdrand.rs  solaris.rs  solid.rs  use_file.rs  util.rs  util_libc.rs  vxworks.rs  wasi.rs  windows.rs
crates/getrandom-0.2.15/tests/: custom.rs  normal.rs  rdrand.rs
crates/ppv-lite86-0.2.17/src/: generic.rs  lib.rs  soft.rs  types.rs
crates/rand-0.8.5/: Cargo.toml
crates/rand-0.8.5/src/: lib.rs  rng.rs
crates/rand_chacha-0.6.0/: Cargo.toml
crates/rand_chacha-0.6.0/src/: chacha.rs  guts.rs  lib.rs
crates/rand_core-0.6.0/: Cargo.toml
crates/rand_core-0.6.0/src/: block.rs  error.rs  impls.rs  le.rs  lib.rs  os.rs
crates/rand_pcg-0.3.1/: Cargo.toml
crates/rand_pcg-0.3.1/src/: lib.rs  pcg128.rs  pcg64.rs
crates/rand_pcg-0.3.1/tests/: lcg128xsl64.rs  lcg64xsh32.rs  mcg128xsl64.rs
crypt/: Cargo.toml
crypt/src/: builder.rs  cell.rs  channel.rs  circuit.rs  constants.rs  crypt.rs  ed25519.rs  lib.rs  rand.rs  stream.rs  tls.rs  types.rs
derive/: Cargo.toml
derive/resources/: class_builder_template.txt  class_get_mut_template.txt  class_get_template.txt  class_impl_get_mut_template.txt  class_impl_get_template.txt  class_macro_template.txt  class_struct_const_template.txt  class_struct_template.txt  class_trait_impl_template.txt  ser_struct_template.txt
derive/src/: class.rs  config.rs  derive.rs  derive_conf.rs  derive_ser.rs  document.rs  errorkind.rs  impls.rs  lib.rs  macros.rs  mvc.rs  object.rs  ser.rs  test.rs  types.rs  utils.rs
derive/templates/: class_builder_template.txt  class_const_default.txt  class_get_mut_template.txt  class_impl_builder_template.txt  class_impl_get_mut_template.txt  class_impl_get_template.txt  class_impl_struct_template.txt  class_macro_template.txt  class_template.txt  config.template.txt  config_set_configurable.template.txt  config_set_configurable_arr.template.txt  config_vec_configurable_params_push.template.txt  errorkind.template.txt  ser_enum.template.txt
derive2/: Cargo.toml
derive2/src/: class.rs  document.rs  errorkind.rs  lib.rs  ser.rs  types.rs
derive2/templates/: class_builder_template.txt  class_macro_template.txt  class_template.txt  ser_enum.template.rs  ser_struct.template.rs  ser_struct.template.txt
docs/: code_coverage.html  code_coverage.html.template  index.md  tarpaulin_summary.txt
docs/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/doc/bitcoinmw/: all.html  index.html
docs/doc/bmw/: all.html  constant.BMW_GLOBAL_LOG_LEVEL.html  constant.LOG_LEVEL.html  (+6 more)
docs/templates/: lib.rs.template
error/: Cargo.toml
error/src/: error.rs  lib.rs  macros.rs  public.rs  test.rs  types.rs
etc/ds_perf/: Cargo.toml
etc/evh_perf/: Cargo.toml  README.md
etc/http.disabled/: Cargo.toml
etc/http_server/: Cargo.toml
etc/httphit/: Cargo.toml
etc/perf/: Cargo.toml
etc/rustlet/: Cargo.toml
etc/rustlet.disabled/: Cargo.toml
etc/util_perf/: Cargo.toml  README.md
evh/: Cargo.toml
evh/src/: builder.rs  constants.rs  evh.rs  lib.rs  linux.rs  mac.rs  macros.rs  test.rs  types.rs  win.rs
evh2/: Cargo.toml
evh2/src/: builder.rs  constants.rs  evh.rs  lib.rs  linux.rs  mac.rs  macros.rs  test.rs  types.rs  win.rs
http/: Cargo.toml
http/src/: builder.rs  cache.rs  client.rs  constants.rs  http.rs  lib.rs  macros.rs  test.rs  types.rs  ws.rs
impl/: Cargo.toml
impl/resources/: ser_enum_template.txt  ser_struct_template.txt
impl/src/: config.rs  constants.rs  document.rs  error.rs  functions.rs  lib.rs  macros.rs  object.rs  public.rs  ser.rs  test.rs  traitify.rs  tt.rs  types.rs  utils.rs
integration/: Cargo.toml
integration/src/: impls.rs  lib.rs  public.rs  test.rs  test_class.rs  test_clone.rs  test_config.rs  test_document.rs  test_error.rs  test_serializable.rs
integration2/: Cargo.toml
integration2/src/: lib.rs
log/: Cargo.toml
log/src/: builder.rs  constants.rs  global.rs  lib.rs  log.rs  macros.rs  public.rs  test.rs  test_mvc.rs  types.rs
log/src.bak/: builder.rs  lib.rs  log.rs  macros.rs  test.rs  types.rs
rustlet/: Cargo.toml
rustlet/src/: lib.rs  macros.rs  rustlet.rs  test.rs  types.rs
ser/: Cargo.toml
ser/src/: functions.rs  lib.rs  public.rs  ser.rs  test.rs  types.rs
src/: lib.rs  main.rs
test/: Cargo.toml
test/src/: builder.rs  impls.rs  lib.rs  macros.rs  port.rs  public.rs  test.rs  testdir.rs  types.rs
util/: Cargo.toml
util/src/: array.rs  builder.rs  collections.rs  constants.rs  hash.rs  hashclass.rs  hashlist.rs  lib.rs  lock.rs  macros.rs  misc.rs  rand.rs  search_trie.rs  ser.rs  slabio.rs  slabs.rs  suffix_tree.rs  test.rs  test_configurable_derive.rs  test_serializable_derive.rs  threadpool.rs  types.rs
(+806 files in other folders)
