[package]
name = "bitcoinmw"
version = "0.0.3-beta.2"
authors = ["The BitcoinMW Developers"]
description = "BitcoinMW core libraries"
license = "Apache-2.0"
repository = "https://github.com/cgilliard/bitcoinmw"
keywords = [ "crypto", "bitcoinmw"]
readme = "README.md"
exclude = ["**/*.bmw", "**/*.bmw"]
build = "src/build/build.rs"
edition = "2021"

[workspace]
members = [
	"deps",
	"base",
	"test",
	"derive",
	"integration",
	"integration2",
]
exclude = ["etc"]

[dependencies]
bmw_base   = { path = "./base"   }
bmw_derive = { path = "./derive" }

[dev-dependencies]
bmw_test = { path = "./test"         }
bmw_int  = { path = "./integration"  }
bmw_int2 = { path = "./integration2" }

[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator = "0.5.4"

[build-dependencies]
built = { version = "0.7.2", features = ["git2"]}

