[package]
name = "bitcoinmw"
version = "0.0.3-beta.2"
authors = ["The BitcoinMW Developers"]
description = "BitcoinMW core libraries"
license = "Apache-2.0"
repository = "https://github.com/cgilliard/bitcoinmw"
keywords = [ "crypto", "bitcoinmw"]
readme = "README.md"
exclude = ["**/*.bmw", "**/*.bmw"]
build = "src/build/build.rs"
edition = "2021"

[workspace]
members = [
	"deps",
	"base",
	"test",
	"derive",
	"core",
	"log",
	"integration",
]
exclude = ["etc"]

[dependencies]
bmw_base   = { path = "./base"   }
bmw_derive = { path = "./derive" }
bmw_core   = { path = "./core"   }
bmw_log    = { path = "./log"    }

[dev-dependencies]
bmw_test = { path = "./test"         }
bmw_int  = { path = "./integration"  }

[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator = "0.5.4"

[build-dependencies]
built = { version = "0.7.2", features = ["git2"]}

