[package]
name = "bitcoinmw"
version = "0.0.3-beta.2"
authors = ["The BitcoinMW Developers"]
description = "BitcoinMW core libraries"
license = "Apache-2.0"
repository = "https://github.com/cgilliard/bitcoinmw"
keywords = [ "crypto", "bitcoinmw"]
readme = "README.md"
exclude = ["**/*.bmw", "**/*.bmw"]
build = "src/build/build.rs"
edition = "2021"

[workspace]
members = [
	"deps",
]
exclude = ["etc"]

[dependencies]
bmw_deps = { path = "./deps"   }

[dev-dependencies]

[build-dependencies]

