[package]
name = "bmw_base"
version = "0.0.3-beta.2"
authors = ["The BitcoinMW Developers"]
description = "Core Library for defining traits/enums/structs used in derive"
license = "Apache-2.0"
repository = "https://github.com/cgilliard/bitcoinmw"
keywords = [ "crypto", "bitcoinmw"]
readme = "README.md"
exclude = ["**/*.bmw", "**/*.bmw"]
edition = "2021"

[dependencies]

bmw_deps = { path = "../deps"  }
