[package]
name = "bmw_conf"
version = "0.0.3-beta.1"
authors = ["The BitcoinMW Developers"]
description = "Configuration Library"
license = "Apache-2.0"
repository = "https://github.com/cgilliard/bitcoinmw"
keywords = [ "crypto", "bitcoinmw"]
readme = "README.md"
exclude = ["**/*.bmw", "**/*.bmw"]
edition = "2021"

[dependencies]

bmw_deps = { path = "../deps" }

[dev-dependencies]

bmw_test = { path = "../test" }
