[package]
name = "bmw_core"
version = "0.0.3-beta.2"
authors = ["The BitcoinMW Developers"]
description = "Core Library"
license = "Apache-2.0"
repository = "https://github.com/cgilliard/bitcoinmw"
keywords = [ "crypto", "bitcoinmw"]
readme = "README.md"
exclude = ["**/*.bmw", "**/*.bmw"]
edition = "2021"

[dependencies]

bmw_derive2 = { path = "../derive2" }
bmw_base    = { path = "../base"    }
bmw_deps    = { path = "../deps"    }
