[package]
name = "bmw_derive"
version = "0.0.3-beta.2"
authors = ["The BitcoinMW Developers"]
description = "Proc Macros for BitcoinMW"
license = "Apache-2.0"
repository = "https://github.com/cgilliard/bitcoinmw"
keywords = [ "crypto", "bitcoinmw"]
readme = "README.md"
exclude = ["**/*.bmw", "**/*.bmw"]
edition = "2021"

[dependencies]

bmw_impl = { path = "../impl"  }
bmw_core = { path = "../core"  }
bmw_err  = { path = "../error" }
