[package]
name = "bmw_err"
version = "0.0.3-beta.1"
authors = ["The BitcoinMW Developers"]
description = "Error Library"
license = "Apache-2.0"
repository = "https://github.com/cgilliard/bitcoinmw"
keywords = [ "crypto", "bitcoinmw"]
readme = "README.md"
exclude = ["**/*.bmw", "**/*.bmw"]
edition = "2021"

[dependencies]

bmw_deps = { path = "../deps" }

