[package]
name = "bmw_evh2"
version = "0.0.3-beta.1"
authors = ["The BitcoinMW Develoeprs"]
description = "Eventhandler v2"
license = "Apache-2.0"
repository = "https://github.com/cgilliard/bitcoinmw"
keywords = [ "crypto", "bitcoinmw" ]
readme = "README.md"
exclude = ["**/*.bmw", "**/*.bmw"]
edition = "2021"

[dependencies]

bmw_deps   = { path = "../deps"   }
bmw_err    = { path = "../error"  }
bmw_conf   = { path = "../config" }
bmw_log    = { path = "../log"    }
bmw_ser    = { path = "../ser"    }
bmw_derive = { path = "../derive" }
bmw_util   = { path = "../util"   }

[dev-dependencies]
bmw_test = { path = "../test" }
