[package]
name = "bmw_impl"
version = "0.0.3-beta.2"
authors = ["The BitcoinMW Developers"]
description = "Proc Macros Implementation for BitcoinMW"
license = "Apache-2.0"
repository = "https://github.com/cgilliard/bitcoinmw"
keywords = [ "crypto", "bitcoinmw" ]
exclude = ["**/*.bmw"]
edition = "2021"

[dependencies]

bmw_deps = { path = "../deps"  }
bmw_err  = { path = "../error" }
bmw_ser  = { path = "../ser"   }
bmw_core = { path = "../core"  }

[lib]
proc-macro = true

