[package]
name = "bmw_int"
version = "0.0.3-beta.1"
authors = ["The BitcoinMW Developers"]
description = "Integration test Library"
license = "Apache-2.0"
repository = "https://github.com/cgilliard/bitcoinmw"
keywords = [ "crypto", "bitcoinmw" ]
readme = "README.md"
exclude = ["**/*.bmw", "**/*.bmw"]
edition = "2021"

[dependencies]

bmw_deps   = { path = "../deps"   }
bmw_err    = { path = "../error"  }
bmw_log    = { path = "../log"    }
bmw_ser    = { path = "../ser"    }
bmw_derive = { path = "../derive" }
bmw_util   = { path = "../util"   }
bmw_evh    = { path = "../evh"    }

[dev-dependencies]

bmw_test   = { path = "../test"   }
