[package]
name = "bmw_rustlet"
version = "0.0.3-beta.1"
authors = ["The BitcoinMW Developers"]
description = "Rustlet Library"
license = "Apache-2.0"
repository = "https://github.com/cgilliard/bitcoinmw"
keywords = [ "crypto", "bitcoinmw" ]
readme = "README.md"
exclude = ["**/*.bmw", "**/*.bmw"]
edition = "2021"

[dependencies]

bmw_deps   = { path = "../deps"   }
bmw_err    = { path = "../error"  }
bmw_log    = { path = "../log"    }
bmw_util   = { path = "../util"   }
bmw_http   = { path = "../http"    }

[dev-dependencies]
bmw_test = { path = "../test" }
