[package]
name = "bmw_ser"
version = "0.0.3-beta.2"
authors = ["The BitcoinMW Developers"]
description = "Serializable Library"
license = "Apache-2.0"
repository = "https://github.com/cgilliard/bitcoinmw"
keywords = [ "crypto", "bitcoinmw"]
readme = "README.md"
exclude = ["**/*.bmw", "**/*.bmw"]
edition = "2021"

[dependencies]

bmw_deps = { path = "../deps"  }
bmw_err  = { path = "../error" }
bmw_log  = { path = "../log"   }

[dev-dependencies]
bmw_test = { path = "../test" }
