[package]
name = "bmw_test"
version = "0.0.3-beta.2"
authors = ["The BitcoinMW Developers"]
description = "Test Util Library"
license = "Apache-2.0"
repository = "https://github.com/cgilliard/bitcoinmw"
keywords = [ "crypto", "bitcoinmw"]
readme = "README.md"
exclude = ["**/*.bmw", "**/*.bmw"]
edition = "2021"

[dependencies]

bmw_deps = { path = "../deps"  }
bmw_err =  { path = "../error" }
