[package]
name = "rand_chacha"
version = "0.3.0"
authors = ["The Rand Project Developers", "The Rust Project Developers", "The CryptoCorrosion Contributors"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rand"
documentation = "https://rust-random.github.io/rand/rand_chacha/"
homepage = "https://crates.io/crates/rand_chacha"
description = """
ChaCha random number generator
"""
keywords = ["random", "rng", "chacha"]
categories = ["algorithms", "no-std"]
edition = "2018"

[dependencies]
rand_core = { path = "../rand_core-0.6.0", version = "0.6.0" }
ppv-lite86 = { path = "../ppv-lite86-0.2.17", default-features = false, features = ["simd"] }

[features]
default = ["std"]
std = ["ppv-lite86/std"]
simd = [] # deprecated
