[package]
name = "http_server"
version = "0.0.3-beta.2"
edition = "2021"
description = "http_server instance for testing"
license = "Apache-2.0"
repository = "https://github.com/cgilliard/bitcoinmw"
readme = "README.md"
exclude = ["**/*.bmw", "**/*.bmw"]
build = "src/build/build.rs"

[[bin]]
name = "http"

[dependencies]
bmw_deps = { path = "../../deps" }
bmw_log = { path = "../../log" }
bmw_util = { path = "../../util" }
bmw_err = { path = "../../error" }
bmw_evh = { path = "../../evh" }
bmw_http = { path = "../../http" }
bmw_conf = { path = "../../config" }

clap = "4.5.4"

[build-dependencies]
built = { version = "0.7.1", features = ["git2"]}
