[package]
name = "rustlet"
version = "0.0.3-beta.2"
edition = "2021"
description = "Rustlet server"
license = "Apache-2.0"
repository = "https://github.com/cgilliard/bitcoinmw"
readme = "README.md"
exclude = ["**/*.bmw", "**/*.bmw"]
build = "src/build/build.rs"

[[bin]]
name = "rustlet"

[dependencies]
bmw_deps = { path = "../../deps" }
bmw_log = { path = "../../log" }
bmw_util = { path = "../../util" }
bmw_err = { path = "../../error" }
bmw_evh = { path = "../../evh" }
bmw_http = { path = "../../http" }
bmw_rustlet = { path = "../../rustlet" }

clap = { version = "2.33", features = ["yaml"] }

[build-dependencies]
built = { version = "0.7.1", features = ["git2"]}
