[package]
name = "util_perf"
version = "0.0.3-beta.2"
edition = "2021"
description = "Utility to test performance of data structures"
license = "Apache-2.0"
repository = "https://github.com/cgilliard/bitcoinmw"
readme = "README.md"
exclude = ["**/*.bmw", "**/*.bmw"]
build = "src/build/build.rs"

[[bin]]
name = "util_perf"

[dependencies]
bmw_deps = { path = "../../deps" }
bmw_log = { path = "../../log" }
bmw_util = { path = "../../util" }
bmw_err = { path = "../../error" }

clap = { version = "2.33", features = ["yaml"] }
num-format = "0.4.4"

[build-dependencies]
built = { version = "0.7.1", features = ["git2"]}
